# brave-core

./: DEPS  Jenkinsfile
app/: brave_command_line_helper.cc  brave_command_line_helper.h  brave_command_line_helper_unittest.cc  brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate.h  brave_strings.grd  printing_strings.grdp  settings_strings.grdp
browser/: BUILD.gn  brave_browser_main_extra_parts.cc  brave_content_browser_client.cc  brave_profile_prefs.cc
common/: network_constants.cc  network_constants.h  pref_names.cc  pref_names.h
components/services/: BUILD.gn
components/services/bat_ads/: bat_ads_app.cc  bat_ads_app.h
components/services/bat_ledger/: bat_ledger_app.cc  bat_ledger_app.h
patches/: base-win-embedded_i18n-create_string_rc.py.patch  chrome-VERSION.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-chrome_content_browser_client.h.patch  chrome-browser-profiles-profile_manager.cc.patch  chrome-browser-resources-bookmarks-reducers.js.patch  chrome-browser-resources-md_bookmarks-toolbar.html.patch  chrome-browser-resources-md_extensions-extensions.html.patch  chrome-browser-resources-md_extensions-manager.html.patch  chrome-browser-resources-md_extensions-toolbar.html.patch  chrome-browser-resources-md_history-history_toolbar.html.patch  chrome-browser-resources-settings-basic_page-basic_page.html.patch  chrome-browser-resources-settings-people_page-people_page.html.patch  chrome-browser-resources-settings-privacy_page-personalization_options.html.patch  (+13 more)
script/: pr.py
test/: BUILD.gn
(+26 files in other folders)
