import("//services/service_manager/public/service_manifest.gni")

service_manifest("brave_content_manifest_overlays") {
  packaged_services = [
    "//brave/components/services/bat_ads:manifest",
    "//brave/components/services/bat_ledger:manifest",
  ]

  if (!is_android) {
    packaged_services += [
      "//brave/utility/tor:tor_launcher_manifest",
    ]
  }

}
